--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,8 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react/jsx-one-expression-per-line": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
@@ -44,7 +46,7 @@
     ],
     "no-use-before-define": "off",
     "prettier/prettier": "error",
-    "camelcase": 0
+    "camelcase": 0,
   },
   "settings": {
     "import/resolver": {
