create sign up page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,7 @@
     ],
     "no-use-before-define": "off",
     "prettier/prettier": "error",
-    "camelcase": 0,
+    "camelcase": 0
   },
   "settings": {
     "import/resolver": {
